# SCA-AGPlace

./: README.md  compute_other_loss.py  datasets_ws.py  pyproject.toml  train.py
configs/: base.yaml  kitti360.yaml  nuscenes.yaml
configs/exp/: ablation_no_utonia.yaml  kitti360_baseline_vlaq_odecq.yaml  kitti360_baseline_vlaq_odecq_lora_full.yaml  kitti360_baseline_vlaq_odecq_lora_full_r16_mr04_do01.yaml  kitti360_baseline_vlaq_odecq_lora_full_r64_mr06_do01.yaml  kitti360_utonia_last1_bf16.yaml  kitti360_vlaq_odecq_ft_dino_peft_utonia.yaml  kitti360_vlaq_odecq_mr03_do01.yaml  kitti360_vlaq_odecq_peft_dino_ft_utonia.yaml  mm_dbvanilla2d.yaml
configs/machines/: 4090.yaml  5080.yaml
datasets/: datasets_ws_kitti360.py  datasets_ws_nuscenes.py  kitti360_calib.py
layers/: lora.py  mlp_adapter.py  mulconv_adapter.py
lit/: callbacks.py  cli.py  datamodule.py  evaluation.py  logging_utils.py  module.py  optim.py  runtime.py  triplet_cache.py
lit/losses/: retrieval.py  sca_loss.py
lit/models/: factory.py
models/: minkloc.py
network/: image_fe.py
network_mm/: fuse_block_toshallow.py  image_fe.py  mm.py  ode_cq.py  stage2fuse_blockadd.py  utonia_fe.py  vlaq.py
src/mag_vlaq/: __init__.py  config.py  util.py
src/mag_vlaq/data/: __init__.py  kitti360.py  kitti360_calib.py  kitti360_dataset.py  kitti360_transforms.py  kitti360_utils.py  legacy_ws.py  nuscenes.py  nuscenes_dataset.py  nuscenes_transforms.py  nuscenes_utils.py  pc_augmentation.py
src/mag_vlaq/lightning/: cli.py  (+9 more)
src/sca/: __init__.py  config.py
tests/: test_phase3_ode_cq.py
tools/: options.py
(+31 files in other folders)
