[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mag-vlaq"
version = "0.1.0"
description = "Lightning training package for MAG-VLAQ"
requires-python = ">=3.10"

[project.scripts]
mag-vlaq-train = "mag_vlaq.lightning.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
